--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,16 @@
 Package: mpea
 Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
+Authors@R: person("Jonathan", "Barenboim", email = "jon.barenboim@gmail.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends: R (>= 3.2.3)
+Imports:
+    metap,
+    data.table
 License: What license is it under?
+URL: 
+BugReports: 
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
+Suggests: testthat
