Rename to activeDriverPW

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,9 @@ S3method("$",GMT)
 S3method("[",GMT)
 S3method("[[",GMT)
 S3method(print,GMT)
+export(activeDriverPW)
 export(is.GMT)
 export(makeBackground)
-export(mpea)
 export(read.GMT)
 export(write.GMT)
 exportClasses(GMT)
