--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
-Package: mpea
-Title: What the Package Does (one line, title case)
-Version: 0.0.0.9001
-Authors@R: person("Jonathan", "Barenboim", email = "jon.barenboim@gmail.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Package: activeDriverPW
+Title: 
+Version: 0.0.0.9002
+Authors@R: c(person("Juri", "Reimand", email = "juri.reimand@utoronto.ca", role = c("aut", "cre")),
+           person("Jonathan", "Barenboim", email = "jon.barenboim@gmail.com", role = "aut"))
+Description: 
 Depends: R (>= 3.2.3)
 Imports:
     metap,
     data.table
-License: What license is it under?
+License: GPL-3
 URL: 
 BugReports: 
 Encoding: UTF-8
