--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(print,GMT)
 export(activeDriverPW)
 export(is.GMT)
 export(makeBackground)
+export(merge_p_values)
 export(read.GMT)
 export(write.GMT)
 exportClasses(GMT)
