--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: activeDriverPW
+Package: activePathways
 Title: Multivariate Pathway Enrichment Analysis
-Version: 1.0.0
+Version: 1.0.1
 Authors@R: c(person("Juri", "Reimand", email = "juri.reimand@utoronto.ca", role = c("aut", "cre")),
            person("Jonathan", "Barenboim", email = "jon.barenboim@gmail.com", role = "aut"))
 Description: Enrichment analysis of annotated gene sets using a set of genes of interest with multiple variables.
