--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: activePathways
+Package: ActivePathways
 Title: Multivariate Pathway Enrichment Analysis
 Version: 1.0.1
 Authors@R: c(person("Juri", "Reimand", email = "juri.reimand@utoronto.ca", role = c("aut", "cre")),
