Updated with Juri's suggestions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ S3method("$",GMT)
 S3method("[",GMT)
 S3method("[[",GMT)
 S3method(print,GMT)
-export(activePathways)
+export(ActivePathways)
 export(is.GMT)
 export(makeBackground)
 export(merge_p_values)
