--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: ActivePathways
 Title: Multivariate Pathway Enrichment Analysis
 Version: 1.0.1
-Authors@R: c(person("Juri", "Reimand", email = "juri.reimand@utoronto.ca", role = c("aut", "cre")),
-           person("Jonathan", "Barenboim", email = "jon.barenboim@gmail.com", role = "aut"))
+Authors@R: c(person("Helen", "Zhu", email = "helen.zhu@oicr.on.ca", role = c("aut", "cre")),
+	     person("Juri", "Reimand", email = "juri.reimand@utoronto.ca", role = "aut"),
+             person("Jonathan", "Barenboim", email = "jon.barenboim@gmail.com", role = "aut"))
 Description: Enrichment analysis of annotated gene sets using a set of genes of interest with multiple variables.
 Depends: R (>= 3.2.3)
 Imports:
@@ -11,7 +12,7 @@ Imports:
     ggplot2
 License: GPL-3
 URL: 
-BugReports: 
+BugReports: https://github.com/reimandlab/ActivePathways/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
