--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: activePathways
-Title: Multivariate Pathway Enrichment Analysis
-Version: 1.0.1
+Title: Integrative Pathway Enrichment Analysis of Multivariate Omics Data.
+Version: 1.0.2
 Authors@R: c(person("Juri", "Reimand", email = "juri.reimand@utoronto.ca", role = c("aut", "cre")),
            person("Jonathan", "Barenboim", email = "jon.barenboim@gmail.com", role = "aut"))
-Description: Enrichment analysis of annotated gene sets using a set of genes of interest with multiple variables.
-Depends: R (>= 3.2.3)
+Description: Integrative pathway enrichment analysis of multivariate omics data.
+Depends: R (>= 3.6.1)
 Imports:
-    metap,
     data.table,
     ggplot2
 License: GPL-3
@@ -14,7 +13,7 @@ URL:
 BugReports: 
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
 Suggests: testthat,
     knitr,
     rmarkdown
