--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: activePathways
-Title: Integrative Pathway Enrichment Analysis of Multivariate Omics Data.
+Package: ActivePathways
+Title: Integrative Pathway Enrichment Analysis of Multivariate Omics Data
 Version: 1.0.2
 Authors@R: c(person("Juri", "Reimand", email = "juri.reimand@utoronto.ca", role = c("aut", "cre")),
            person("Jonathan", "Barenboim", email = "jon.barenboim@gmail.com", role = "aut"))
@@ -10,7 +10,7 @@ Imports:
     ggplot2
 License: GPL-3
 URL: 
-BugReports: 
+BugReports: https://github.com/reimandlab/ActivePathways/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
