--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(makeBackground)
 export(merge_p_values)
 export(read.GMT)
 export(write.GMT)
+export(brownsMethod)
 exportClasses(GMT)
 import(data.table)
 import(ggplot2)
