--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 1.0.2
 Authors@R: c(person("Juri", "Reimand", email = "juri.reimand@utoronto.ca", role = c("aut", "cre")),
            person("Jonathan", "Barenboim", email = "jon.barenboim@gmail.com", role = "aut"))
 Description: Integrative pathway enrichment analysis of multivariate omics data.
-Depends: R (>= 3.6.1)
+Depends: R (>= 3.6)
 Imports:
     data.table,
     ggplot2
@@ -16,5 +16,7 @@ LazyData: true
 RoxygenNote: 7.1.0
 Suggests: testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    metap,
+    EmpiricalBrownsMethod
 VignetteBuilder: knitr
