--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(export_as_CSV)
 export(is.GMT)
 export(makeBackground)
 export(merge_p_values)
+export(orderedHypergeometric)
 export(read.GMT)
 export(write.GMT)
 import(data.table)
