--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method("[",GMT)
 S3method("[[",GMT)
 S3method(print,GMT)
 export(ActivePathways)
+export(DPM)
 export(brownsMethod)
 export(export_as_CSV)
 export(is.GMT)
