Added functions within ActivePathways to merge results and merge (subset) GMT file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ export(brownsMethod)
 export(export_as_CSV)
 export(is.GMT)
 export(makeBackground)
+export(merge_gmt)
 export(merge_p_values)
+export(merge_results)
 export(orderedHypergeometric)
 export(read.GMT)
 export(write.GMT)
